Added a domain-owner leven restriction to prevent changing of a virtual server's password.
Put back support for installing Joomla 1.0 series versions.
---- Changes since 3.73 ----
Updated the Horde Passwd script installer to h3-3.1.1, PHPCoin to 1.6.5, OpenGoo to 1.5.3, LimeSurvey to 1.85plus-build7561-20090902, TextPattern to 4.2.0, CMS Made Simple to 1.6.6, phpMyFAQ to 2.0.17, TWiki to 4.3.2, Rails to 2.3.4, Radiant to 0.8.1, MoinMoin to 1.8.5, SugarCRM to 5.2.0j, Bugzilla to 3.4.2, phpMyAdmin to 3.2.2, Roundcube to 0.3-stable, Redmine to 0.8.5, Drupal to 6.14 and 5.20, Nucleus to 3.50, Magento to 1.3.2.4, Typo3 to 4.2.9, Movable Type to 4.32, TikiWiki to 3.2, Simple Invoices to 2009.1, and Plans to 8.1.3.
Updated Horde to version 3.3.4, and all sub-applications to their latest versions.
Added a script installer for the eXtplorer AJAX file manager, version 2.0.1.
If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
Additional allowed MySQL client hosts are now included in backups.
Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.
Added options to the Module Config page for selecting which columns appear on the List Virtual Servers page, including new ones like the reseller, email address and extra admins.
The contents of mailboxes from Windows Plesk backups are now properly migrated.
Updated the French translation, thanks to Houssin Regis.
Added the modify-php-ini API command to update PHP variables in one or more virtual servers at once.
Added validation to prevent SSL from being enabled on a virtual server with an invalid certificate or key.
Resellers can be denied access to plans using the Edit Reseller page, or via the modify-reseller API call.
Extra administrators can now change their own passwords, via a new link on the left menu.
Added a DNS template option to control which A records are added to new domains.