@@ -1167,3 +1167,4 @@ Added validation to prevent SSL from being enabled on a virtual server with an i
 Resellers can be denied access to plans using the Edit Reseller page, or via the modify-reseller API call.
 Extra administrators can now change their own passwords, via a new link on the left menu.
 Added a DNS template option to control which A records are added to new domains.
+Fixed a bug that prevented paths in php.ini from being updated when a domain is renamed or moved.
